--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,8 @@
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
 		<sonar.host.url>http://13.126.124.176:9000/</sonar.host.url>
-                <sonar.login>edb10a89a335eed32670fea673c402ec25ca2d74</sonar.login>
+                <sonar.login>admin</sonar.login>
+		<sonar.password>passw0rd</sonar.passw0rd>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
