--- a/pom.xml
+++ b/pom.xml
@@ -97,13 +97,13 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mrakesh</name>
+	      <name>Mithun Technologies Releases Nexus Repository</name>
 	      <url>http://13.232.236.127:8081/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>rakesh</name>
+	      <name>Mithun Technologies Snapshot Nexus Repository </name>
 	      <url>http://13.232.236.127:8081/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
