--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
 	<properties>
 		<jdk.version>1.8</jdk.version>
 		<spring.version>5.1.2.RELEASE</spring.version>
-		<junit.version>4.11</junit.version>
+		<junit.ve/rsion>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.126.124.176:9000/</sonar.host.url>
+		<sonar.host.url>http://13.126.32.115:9000</sonar.host.url>
                 <sonar.login>admin</sonar.login>
 		<sonar.password>passw0rd</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://13.232.236.127:8081/repository/wallmart-release/</url>
+	      <url>http://3.109.58.242:8081/repository/wallmart-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://13.232.236.127:8081/repository/wallmart-snapshot/</url>
+	      <url>http://3.109.58.242:8081/repository/wallmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
