--- a/pom.xml
+++ b/pom.xml
@@ -144,7 +144,7 @@
 					<downloadJavadocs>true</downloadJavadocs>
 					<wtpversion>2.0</wtpversion>
 					<wtpContextName>maven-web-application</wtpContextName>
-				</configuratio >
+				</configuration >
 			</plugin>
 			
 </plugins>
